# ISRO-Bharatiya-Antariksh-Hackathon-2026

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  vercel.json
.git_backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_backup/logs/: HEAD
.git_backup/logs/refs/heads/: main
.git_backup/logs/refs/remotes/origin/: HEAD  main
.git_backup/refs/remotes/origin/: main
.github/workflows/: ci.yml  main.yml
apps/backend/: main.py
apps/backend/api/: ps3.py  satellite.py  simulate.py
apps/backend/core/: config.py
apps/backend/services/: aqi_service.py  exposure_credit.py  graph_store.py  multi_pollutant_service.py  route_service.py  satellite_aqi_service.py
apps/frontend/: app.js  index.html  style.css  styles.py
apps/frontend/components/: ai_engine.py
data/satellite/copernicus/: S5P_L2_CO_20260627.nc  S5P_L2_HCHO_20260627.nc  S5P_L2_NO2_20260627.nc  S5P_L2_SO2_20260627.nc
data/satellite/insat3d/: 3D_AOD_27Jun2026.nc
infra/ci/: github-actions.yml
infra/scripts/: setup.sh
models/aqi_estimation/: aod_to_pm25_gwr.py  cnn_lstm.pth  cnn_lstm_model.py  evaluate.py  india_aqi_calculator.py  train.py
models/hotspot/: fire_hcho_correlator.py  hcho_gridder.py  hotspot_detector.py  source_regions.py
models/validation/: cpcb_validator.py
requirements/: backend.txt
scripts/: fetch_firms_fires.py  fetch_insat3d_aod.py  fetch_tropomi.py  test_pipeline.py
tests/: test_ps3_complete.py
